# Server

./: .dockerignore  .env.example  .gitignore  AutomatePix4D.py  CoordLookUp.html  DEPLOY.md  DESIGN.md  DJIAutomatePPK.py  DJIAutomatePPKV2.py  DJI_AUTOMATE_PPK.spec  DJI_AUTOMATE_UI.spec  DataIntakeAgent.spec  Dockerfile  PIX4D_AUTOMATE.spec  PyAutomateDJI.py  PyAutomateDJI.spec  Pywintester.py  README.md  UIInspect.py  build.py  build_config.ini  classify_3dr.py  data_intake.py  docker-compose.yml  embed_ppk_metadata.py  pyproject.toml
agent/: client.py  config.py  main.py  preflight.py  runner.py  setup.py  tray.py
automation/: AutomatePix4D.py  DJIAutomatePPKV2.py  DJI_PARAMETERS.ini  PyAutomateDJI.py  license_probe.py
config/: agent-all.example.yaml  agent.example.yaml  coordinator.example.yaml
coordinator/: api.py  assign.py  config.py  db.py  eject.py  epsg_names.py  intake.py  main.py  notify.py  probe.py
coordinator/dashboard/templates/: index.html
intake/: queue_client.py
processors/: __init__.py  base.py  cyclone_classify.py  intake.py  intake_ops.py  mock.py  pix4dmatic.py  terra_lidar.py  terra_ppk.py  util.py
scripts/: data-intake-eject.service  fake_agent.py  install_agent.ps1  nas_eject_watcher.py  seed_demo.py  update_agent.ps1
shared/: schemas.py
tests/: conftest.py  helpers.py  test_agent_e2e.py  test_agent_recovery.py  test_agent_runner.py  test_agent_setup.py  test_agent_tray.py  test_assignment.py  test_auth.py  test_browse.py  test_capabilities.py  test_config.py  test_eject.py  test_intake_client.py  test_intake_copy_worker.py  test_intake_probe_upload.py  test_intake_processor.py  test_intake_submit.py  test_job_delete.py  test_lifecycle.py  test_node_delete.py  test_notify.py  test_probe.py  test_processors_cyclone_pix4d.py  test_processors_terra.py  test_projects.py  test_recovery.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  Dashboard.jsx  FilePicker.jsx  Machines.jsx  Projects.jsx  Submit.jsx  SunsetProgress.jsx  UploadField.jsx  api.js  main.jsx  styles.css  theme.js  ui.jsx  useContainerRestart.js  usePoll.js
